fix spacing issues on image-hero and project pages

--- a/_sass/_components/layout.scss
+++ b/_sass/_components/layout.scss
@@ -32,6 +32,10 @@
 
 .usa-section {
   @include padding($section-margins null);
+
+  .page-lead {
+    margin-top: 0;
+  }
 }
 
 .background-dark {
